--- a/11 - COFLA/index.html
+++ b/11 - COFLA/index.html
@@ -2,27 +2,48 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COFLA</title>
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>COFLA Problema 2</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
         href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins&family=Roboto+Slab:wght@300&family=Roboto:wght@500&family=Supermercado+One&family=The+Nautigal&family=Vollkorn+SC&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
     <script defer src="https://use.fontawesome.com/releases/v6.0.0/js/all.js"
         integrity="sha384-l+HksIGR+lyuyBo1+1zCBSRt6v4yklWu7RbG0Cv+jDLDD9WFcEIwZLHioVB4Wkau" crossorigin="anonymous">
     </script>
 </head>
 
 <body>
-    
+    <div class="flex-container">
+        <div class="grid-container">
+            <div class="grid-item nombre">Daniel Mateu</div>
+            <div class="grid-item email">dani@gmail.com</div>
+            <div class="grid-item materia">Fisica 3</div>
+            <div class="grid-item semana">
+                <select name="" id="semana-elegida" class="semana-elegida">
+                    <option value="1">Semana 1</option>
+                    <option value="2">Semana 2</option>
+                </select>
+            </div>
 
+            <div class="grid-item nombre">Daniel Mateu</div>
+            <div class="grid-item email">dani@gmail.com</div>
+            <div class="grid-item materia">Fisica 3</div>
+            <div class="grid-item semana">
+                <select name="" id="semana-elegida" class="semana-elegida">
+                    <option value="1">Semana 1</option>
+                    <option value="2">Semana 2</option>
+                </select>
+            </div>
+            
+        </div>
+    </div>
 
     <script src="./app.js"></script>
-
 </body>
 
 </html>
