--- a/13 -COFLA/index.html
+++ b/13 -COFLA/index.html
@@ -18,7 +18,12 @@
 </head>
 
 <body>
-
+    <div class="formulario-de-notas">
+        <form action="">
+            <h2>Introduce la nota del alumno</h2>
+            <input type="number" id="nota-alumno" />
+        </form>
+    </div>
 
     <script src="./app.js"></script>
 </body>
