--- a/13 -COFLA/index.html
+++ b/13 -COFLA/index.html
@@ -20,15 +20,15 @@
 <body>
     <div class="modal-bg">
         <div class="modal">
-            <h3 class="resultado"></h3>
-            <p class="mensaje"></p>
+            <h3 class="resultado">Hahahaha</h3>
+            <p class="mensaje">Hohohoho</p>
         </div>
     </div>
 
     <div class="formulario-de-notas">
         <form action="">
             <h2>Introduce la nota del alumno</h2>
-            <input type="number" id="nota-alumno" />
+            <input type="number" min='0' max="10" id="nota-alumno" />
             <input type="button" id="enviar-nota" value="enviar" />
         </form>
     </div>
