Obtenemos los datos y los mostramos

--- a/18 - COFLA/index.html
+++ b/18 - COFLA/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8" />
@@ -18,10 +18,16 @@
 </head>
 
 <body>
+    <div class="materias">
+        <div class="materia">
+            <div class="nombre">Fisica</div>
+            <div class="nota">10</div>
+        </div>
+    </div>
    
 
     <script src="./app.js"></script>
-    <script src="./anotherapp.js"></script>
+   
 </body>
 
 </html>
