async await done!

--- a/18 - COFLA/index.html
+++ b/18 - COFLA/index.html
@@ -18,12 +18,12 @@
 </head>
 
 <body>
-    <div class="materias">
+    <!-- <div class="materias">
         <div class="materia">
             <div class="nombre">Fisica</div>
             <div class="nota">10</div>
         </div>
-    </div>
+    </div> -->
    
 
     <script src="./app.js"></script>
