--- a/19 - Peticiones HTTP JSON/index.html
+++ b/19 - Peticiones HTTP JSON/index.html
@@ -18,16 +18,12 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header"></header>
 
-    </header>
-
-    <section class="section" >
-
-    </section>
+    <section class="section" ></section>
 
     <script src="./app.js"></script>
-   
+    <script src="./app2.js"></script>
 </body>
 
 </html>
