--- a/26 - COFLA/index.html
+++ b/26 - COFLA/index.html
@@ -19,7 +19,9 @@
 </head>
 
 <body>
-    
+    <button class="get-info">Obtener Información</button>
+    <!-- <div class="num-aprobados"></div>
+    <div class="num-suspendidos"></div> -->
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./app.js"></script>
